fix: dark theme not showing

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,7 +40,10 @@ body {
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
   }
-  .dark {
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
     --background: 0 0% 3.9%;
     --foreground: 0 0% 98%;
     --card: 0 0% 3.9%;
